--- a/spine/tags/0.8.8e/ChangeLog
+++ b/spine/tags/0.8.8e/ChangeLog
@@ -2,6 +2,8 @@
 
 0.8.8e
 
+-bug#0002398: Buffer overflow
+-bug#0002447: Building spine on Debian Jessie (testing) fails 
 -bug#0002576: Call to a non-existent column of the database in poller.c
 -bug#0002578: spine doesn't compile on ubuntu 12.04
 -bug#0002585: Spine: buffer overflow in logging when RESULTS_BUFFER>LOGSIZE can SEGV
